Revision history for Dist-Zilla-Plugin-Typemap

{{$NEXT}}

0.005     2023-10-08 13:59:04+02:00 Europe/Brussels
          - Allow a + prefex in module names

0.004     2023-09-02 20:39:54+02:00 Europe/Brussels
          - Only call minimum_pxs if supported

0.003     2023-09-02 17:50:57+02:00 Europe/Brussels
          - Automatically determine mimimum ParseXS version

0.002     2023-05-09 12:38:13+02:00 Europe/Amsterdam
          - Make plugin a FileMunger
          - Add filename attribute
          - Add version to typemap module dependencies

0.001     2023-05-08 20:35:34+02:00 Europe/Amsterdam
          Initial release to an unsuspecting world