@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-Typemap
 
 {{$NEXT}}
+          - Make plugin a FileGatherer instead of a FileMunger
 
 0.005     2023-10-08 13:59:04+02:00 Europe/Brussels
           - Allow a + prefex in module names
